# renderer-demo

./: .clang-format  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CREDITS.txt  README.md  imgui.ini  mkdocs.yml
.claude/: settings.json
.claude/commands/: refresh-notes.md  update-notes.md
.codex/commands/: draft-req.md  finish-req.md  refresh-notes.md  sync-design-docs.md  update-notes.md
.cursor/: AGENTS.md
.cursor/rules/: powershell-shell-guidance.md
.tmp/: notes-serve.pid
assets/: README.md
assets/env/: README.md
debug/: extract_call_info.py
docs/design/: MaterialSystem.md
docs/requirements/: 003b-pipeline-prebuilding.md  027-spot-light.md  (+25 more)
experiments/: CMakeLists.txt  CreateInstanceTest.cpp  SDLIntegrationTest.cpp
faq/: README.md
materials/: blinnphong_default.material  blinnphong_lit.material  blinnphong_textured.material  test_invalid_normal_no_light.material  test_invalid_normal_no_uv.material
notes/: .sync-meta.json  README.md  architecture.md  glossary.md  nav.yml
scripts/: _gen_notes_site.py  _notes_hooks.py  build-debug.ps1  build-experiments.ps1  build-project.ps1  build-shaders.ps1  config-project.ps1  load-dotenv.ps1  prebuild.ps1  run-debug.ps1  run-project.ps1  run-release.ps1  serve-notes.sh
shaders/: CMakeLists.txt  shader.frag
src/: main.cpp  utils.cpp  utils.h
src/core/: CMakeLists.txt
src/core/asset/: material.cpp  material.hpp  material_instance.cpp  material_instance.hpp  material_pass_definition.hpp  material_template.hpp  mesh.hpp  shader.cpp  shader.hpp  shader_binding_ownership.hpp  skeleton.hpp  texture.hpp
src/core/frame_graph/: pass.cpp  pass.hpp  render_queue.cpp  render_target.cpp
src/core/gpu/: image_format.hpp  render_resource.hpp  render_target.cpp  render_target.hpp  renderer.hpp
src/core/input/: dummy_input_state.hpp  input_state.hpp  key_code.hpp  mock_input_state.hpp  mouse_button.hpp
src/core/math/: bounds.hpp  mat.hpp  quat.hpp  vec.hpp
src/core/pipeline/: pipeline_key.hpp
src/core/platform/: types.hpp  window.hpp
src/core/resources/: buffer.hpp  index_buffer.cpp  index_buffer.hpp  material.cpp  material.hpp  mesh.hpp  pipeline_build_info.cpp  pipeline_build_info.hpp  pipeline_key.cpp  pipeline_key.hpp  shader.hpp  skeleton.hpp  texture.hpp  uniform_buffer.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/core/rhi/: index_buffer.hpp  render_resource.hpp  vertex_buffer.hpp
src/core/scene/: camera.hpp  camera_controller.hpp  frame_graph.cpp  frame_graph.hpp  freefly_camera_controller.cpp  freefly_camera_controller.hpp  light.hpp  object.cpp  object.hpp  orbit_camera_controller.cpp  orbit_camera_controller.hpp  pass.hpp  render_queue.cpp  render_queue.hpp  scene.cpp  scene.hpp
src/core/scene/components/: base.hpp  material.hpp  mesh.hpp  skeleton.hpp
src/core/time/: clock.cpp  clock.hpp
src/core/utils/: filesystem_tools.cpp  filesystem_tools.hpp  hash.hpp  string_table.cpp  string_table.hpp
src/demos/scene_viewer/: CMakeLists.txt  README.md  camera_rig.cpp  camera_rig.hpp  main.cpp  scene_builder.cpp  scene_builder.hpp  ui_overlay.cpp  ui_overlay.hpp
src/graphics_backend/: CMakeLists.txt  TODO.md
src/graphics_backend/vulkan/: vk_renderer.cpp  vk_renderer.hpp
src/graphics_backend/vulkan/details/: vk_device.cpp  vk_device.hpp  vk_resource_manager.cpp  vk_resource_manager.hpp
src/graphics_backend/vulkan/details/commands/: vkc_cmdbuffer.cpp  vkc_cmdbuffer.hpp  vkc_cmdbuffer_manager.cpp  vkc_cmdbuffer_manager.hpp
src/graphics_backend/vulkan/details/descriptors/: vkd_descriptor_manager.cpp  vkd_descriptor_manager.hpp
src/graphics_backend/vulkan/details/pipelines/: vkp_base.hpp  vkp_blinnphong.cpp  vkp_blinnphong.hpp  vkp_pipeline.cpp  vkp_pipeline.hpp  vkp_pipeline_slot.hpp
src/graphics_backend/vulkan/details/render_objects/: vkr_framebuffer.cpp  vkr_framebuffer.hpp  vkr_rendercontext.cpp  vkr_rendercontext.hpp  vkr_renderpass.cpp  vkr_renderpass.hpp  vkr_swapchain.cpp  vkr_swapchain.hpp
src/graphics_backend/vulkan/details/resources/: vkr_buffer.cpp  vkr_buffer.hpp  vkr_shader.cpp  vkr_shader.hpp  vkr_texture.cpp  vkr_texture.hpp
src/graphics_backend/vulkan/details/slots/: vkb_combined_image_sampler.hpp  vkb_skeleton.cpp  vkb_skeleton.hpp  vkb_uniform_buffer.cpp  vks_allocator.hpp  vks_slot.hpp
src/infra/: CMakeLists.txt
src/infra/gui/: debug_ui.cpp  debug_ui.hpp  gui.hpp  imgui_gui.cpp
src/infra/loaders/: blinnphong_material_loader.cpp  blinnphong_material_loader.hpp
src/infra/material_loader/: blinn_phong_material_loader.cpp  blinn_phong_material_loader.hpp  generic_material_loader.cpp  generic_material_loader.hpp
src/infra/mesh_loader/: cgltf_impl.cpp  gltf_mesh_loader.cpp  gltf_mesh_loader.hpp
src/infra/shader_compiler/: compiled_shader.cpp  compiled_shader.hpp  shader_reflector.cpp  shader_reflector.hpp
src/infra/texture_loader/: placeholder_textures.cpp  placeholder_textures.hpp
src/infra/window/: glfw_window.cpp  sdl3_input_state.cpp  sdl3_input_state.hpp  sdl_window.cpp  window.hpp  window_impl_sdl.cpp
src/test/: CMakeLists.txt  test_render_triangle.cpp  test_vulkan_buffer.cpp  test_vulkan_command_buffer.cpp  test_vulkan_depth.cpp  test_vulkan_device.cpp  test_vulkan_framebuffer.cpp  test_vulkan_pipeline.cpp  test_vulkan_renderer.cpp  test_vulkan_renderpass.cpp  test_vulkan_resource_manager.cpp  test_vulkan_shader.cpp  test_vulkan_texture.cpp
src/test/integration/: scene_test_helpers.hpp  test_assets_layout.cpp  test_blinn_phong_material_loader.cpp  test_clock.cpp  test_debug_ui_smoke.cpp  test_engine_loop.cpp  test_frame_graph.cpp  test_freefly_camera_controller.cpp  test_generic_material_loader.cpp  test_gltf_loader.cpp  test_imgui_overlay.cpp  test_input_state.cpp  test_material_instance.cpp  test_material_variant_rules.cpp  test_orbit_camera_controller.cpp  test_pipeline_build_info.cpp  test_pipeline_cache.cpp  test_pipeline_identity.cpp  test_scene_node_validation.cpp  test_sdl_input.cpp  test_shader_compiler.cpp  test_string_table.cpp  test_vulkan_command_buffer.cpp  test_vulkan_pipeline.cpp  test_vulkan_resource_manager.cpp
(+259 files in other folders)
